--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@ body {
 }
 h1 {
   font-weight: bolder;
+  margin-top: 7px;
 }
 ul {
   padding-left: 0px;
@@ -16,13 +17,23 @@ ul {
   border-style: solid;
   border-width: 2px;
   max-width: 600px;
+  min-width: 300px;
+
   border-radius: 3px;
   text-align: center;
   margin: 0 auto;
   margin-top: 26px;
   padding: 10px;
 }
+.celsius {
+  text-decoration: none;
+  color: black;
+}
 
+.fahrenheit {
+  text-decoration: none;
+  color: black;
+}
 .date {
   padding-top: 48px;
   font-size: larger;
