--- a/src/style.css
+++ b/src/style.css
@@ -104,7 +104,8 @@ ul {
 }
 .weather-forecast {
   text-align: center;
-  margin-top: 5px;
+  margin-top: 7px;
+  margin-bottom: 5px;
 }
 .weather-forecast-temperature {
   font-size: 15px;
