--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@ body {
 }
 h1 {
   font-weight: bolder;
-  margin-top: 7px;
+  margin-top: 14px;
 }
 ul {
   padding-left: 0px;
@@ -27,14 +27,10 @@ ul {
   padding: 10px;
 }
 
-.celsius {
-  text-decoration: none;
-  color: black;
-}
-
-.fahrenheit {
-  text-decoration: none;
-  color: black;
+.units {
+  position: relative;
+  font-size: 16px;
+  top: -18px;
 }
 .date {
   padding-top: 48px;
@@ -69,12 +65,6 @@ ul {
 }
 .buttomSection {
   padding-top: 15px;
-}
-
-.units {
-  line-height: 10px;
-  padding-bottom: 10px;
-  text-decoration: none;
 }
 
 .active {
